update for k8s deployment